Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UStaticMeshComponent.h

	DOTNET_EXPORT auto E_UStaticMeshComponent_GetComponentVelocity(UStaticMeshComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetComponentVelocity());
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetInertiaTensor(UStaticMeshComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return (INT_PTR) new FVector(Self->GetInertiaTensor(_p0));
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetLinearDamping(UStaticMeshComponent* Self)
	{
		return Self->GetLinearDamping();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetMass(UStaticMeshComponent* Self)
	{
		return Self->GetMass();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetMassScale(UStaticMeshComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return Self->GetMassScale(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetNavigationBounds(UStaticMeshComponent* Self)
	{
		return (INT_PTR) new FBox(Self->GetNavigationBounds());
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetSquaredDistanceToCollision(UStaticMeshComponent* Self, INT_PTR Point, float OutSquaredDistance, INT_PTR OutClosestPointOnCollision)
	{
		auto _p0 = *(FVector*)Point;
		auto _p1 = OutSquaredDistance;
		auto _p2 = *(FVector*)OutClosestPointOnCollision;
		return Self->GetSquaredDistanceToCollision(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetStaticDepthPriorityGroup(UStaticMeshComponent* Self)
	{
		return Self->GetStaticDepthPriorityGroup();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_HasValidPhysicsState(UStaticMeshComponent* Self)
	{
		return Self->HasValidPhysicsState();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsAnyRigidBodyAwake(UStaticMeshComponent* Self)
	{
		return Self->IsAnyRigidBodyAwake();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsEditorOnly(UStaticMeshComponent* Self)
	{
		return Self->IsEditorOnly();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsGravityEnabled(UStaticMeshComponent* Self)
	{
		return Self->IsGravityEnabled();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsReadyForFinishDestroy(UStaticMeshComponent* Self)
	{
		return Self->IsReadyForFinishDestroy();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsSimulatingPhysics(UStaticMeshComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return Self->IsSimulatingPhysics(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsWorldGeometry(UStaticMeshComponent* Self)
	{
		return Self->IsWorldGeometry();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsZeroExtent(UStaticMeshComponent* Self)
	{
		return Self->IsZeroExtent();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_MoveComponentImpl(UStaticMeshComponent* Self, INT_PTR Delta, INT_PTR NewRotation, bool bSweep, INT_PTR OutHit, EMoveComponentFlags MoveFlags, ETeleportType Teleport)
	{
		auto _p0 = *(FVector*)Delta;
		auto _p1 = *(FQuat*)NewRotation;
		auto _p2 = bSweep;
		auto _p3 = (FHitResult*)OutHit;
		auto _p4 = MoveFlags;
		auto _p5 = Teleport;
		return ((E_PROTECTED_WRAP_UStaticMeshComponent*)Self)->MoveComponentImpl_WRAP(_p0, _p1, _p2, _p3, _p4, _p5);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_NeedsLoadForClient(UStaticMeshComponent* Self)
	{
		return Self->NeedsLoadForClient();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_NeedsLoadForServer(UStaticMeshComponent* Self)
	{
		return Self->NeedsLoadForServer();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_OnActorEnableCollisionChanged(UStaticMeshComponent* Self)
	{
		Self->OnActorEnableCollisionChanged();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_OnAttachmentChanged(UStaticMeshComponent* Self)
	{
		Self->OnAttachmentChanged();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_OnComponentCollisionSettingsChanged(UStaticMeshComponent* Self)
	{
		((E_PROTECTED_WRAP_UStaticMeshComponent*)Self)->OnComponentCollisionSettingsChanged_WRAP();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_OnComponentDestroyed(UStaticMeshComponent* Self, bool bDestroyingHierarchy)
	{
		auto _p0 = bDestroyingHierarchy;
		Self->OnComponentDestroyed(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_OnUpdateTransform(UStaticMeshComponent* Self, EUpdateTransformFlags UpdateTransformFlags, ETeleportType Teleport)
	{
		auto _p0 = UpdateTransformFlags;
		auto _p1 = Teleport;
		Self->OnUpdateTransform(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_PostDuplicate(UStaticMeshComponent* Self, bool bDuplicateForPIE)
	{
		auto _p0 = bDuplicateForPIE;
		Self->PostDuplicate(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_PutAllRigidBodiesToSleep(UStaticMeshComponent* Self)
	{
		Self->PutAllRigidBodiesToSleep();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_RegisterComponentTickFunctions(UStaticMeshComponent* Self, bool bRegister)
	{
		auto _p0 = bRegister;
		Self->RegisterComponentTickFunctions(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_ScaleByMomentOfInertia(UStaticMeshComponent* Self, INT_PTR InputVector, char* BoneName)
	{
		auto _p0 = *(FVector*)InputVector;
		auto _p1 = ConvertFromManage_FName(BoneName);
		return (INT_PTR) new FVector(Self->ScaleByMomentOfInertia(_p0, _p1));
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SendRenderTransform_Concurrent(UStaticMeshComponent* Self)
	{
		Self->SendRenderTransform_Concurrent();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetAllMassScale(UStaticMeshComponent* Self, float InMassScale)
	{
		auto _p0 = InMassScale;
		Self->SetAllMassScale(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetAllPhysicsAngularVelocity(UStaticMeshComponent* Self, INT_PTR NewAngVel, bool bAddToCurrent)
	{
		auto _p0 = *(FVector*)NewAngVel;
		auto _p1 = bAddToCurrent;
		Self->SetAllPhysicsAngularVelocity(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetAllPhysicsAngularVelocityInRadians(UStaticMeshComponent* Self, INT_PTR NewAngVel, bool bAddToCurrent)
	{
		auto _p0 = *(FVector*)NewAngVel;
		auto _p1 = bAddToCurrent;
		Self->SetAllPhysicsAngularVelocityInRadians(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetAllPhysicsLinearVelocity(UStaticMeshComponent* Self, INT_PTR NewVel, bool bAddToCurrent)
	{
		auto _p0 = *(FVector*)NewVel;
		auto _p1 = bAddToCurrent;
		Self->SetAllPhysicsLinearVelocity(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetAllPhysicsPosition(UStaticMeshComponent* Self, INT_PTR NewPos)
	{
		auto _p0 = *(FVector*)NewPos;
		Self->SetAllPhysicsPosition(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetAllUseCCD(UStaticMeshComponent* Self, bool InUseCCD)
	{
		auto _p0 = InUseCCD;
		Self->SetAllUseCCD(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetAngularDamping(UStaticMeshComponent* Self, float InDamping)
	{
		auto _p0 = InDamping;
		Self->SetAngularDamping(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetCollisionObjectType(UStaticMeshComponent* Self, ECollisionChannel Channel)
	{
		auto _p0 = Channel;
		Self->SetCollisionObjectType(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetCollisionResponseToAllChannels(UStaticMeshComponent* Self, ECollisionResponse NewResponse)
	{
		auto _p0 = NewResponse;
		Self->SetCollisionResponseToAllChannels(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetCollisionResponseToChannel(UStaticMeshComponent* Self, ECollisionChannel Channel, ECollisionResponse NewResponse)
	{
		auto _p0 = Channel;
		auto _p1 = NewResponse;
		Self->SetCollisionResponseToChannel(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetCollisionResponseToChannels(UStaticMeshComponent* Self, INT_PTR NewReponses)
	{
		auto _p0 = *(FCollisionResponseContainer*)NewReponses;
		Self->SetCollisionResponseToChannels(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetEnableGravity(UStaticMeshComponent* Self, bool bGravityEnabled)
	{
		auto _p0 = bGravityEnabled;
		Self->SetEnableGravity(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetLinearDamping(UStaticMeshComponent* Self, float InDamping)
	{
		auto _p0 = InDamping;
		Self->SetLinearDamping(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetMassOverrideInKg(UStaticMeshComponent* Self, char* BoneName, float MassInKg, bool bOverrideMass)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		auto _p1 = MassInKg;
		auto _p2 = bOverrideMass;
		Self->SetMassOverrideInKg(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetMassScale(UStaticMeshComponent* Self, char* BoneName, float InMassScale)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		auto _p1 = InMassScale;
		Self->SetMassScale(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetNotifyRigidBodyCollision(UStaticMeshComponent* Self, bool bNewNotifyRigidBodyCollision)
	{
		auto _p0 = bNewNotifyRigidBodyCollision;
		Self->SetNotifyRigidBodyCollision(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetSimulatePhysics(UStaticMeshComponent* Self, bool bSimulate)
	{
		auto _p0 = bSimulate;
		Self->SetSimulatePhysics(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetUseCCD(UStaticMeshComponent* Self, bool InUseCCD, char* BoneName)
	{
		auto _p0 = InUseCCD;
		auto _p1 = ConvertFromManage_FName(BoneName);
		Self->SetUseCCD(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_ShouldCreatePhysicsState(UStaticMeshComponent* Self)
	{
		return Self->ShouldCreatePhysicsState();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_ShouldRenderSelected(UStaticMeshComponent* Self)
	{
		return Self->ShouldRenderSelected();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_UnWeldChildren(UStaticMeshComponent* Self)
	{
		Self->UnWeldChildren();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_UnWeldFromParent(UStaticMeshComponent* Self)
	{
		Self->UnWeldFromParent();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_UpdatePhysicsToRBChannels(UStaticMeshComponent* Self)
	{
		((E_PROTECTED_WRAP_UStaticMeshComponent*)Self)->UpdatePhysicsToRBChannels_WRAP();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_UpdatePhysicsVolume(UStaticMeshComponent* Self, bool bTriggerNotifiers)
	{
		auto _p0 = bTriggerNotifiers;
		Self->UpdatePhysicsVolume(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_WakeAllRigidBodies(UStaticMeshComponent* Self)
	{
		Self->WakeAllRigidBodies();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_WakeRigidBody(UStaticMeshComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		Self->WakeRigidBody(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_WeldTo(UStaticMeshComponent* Self, USceneComponent* InParent, char* InSocketName)
	{
		auto _p0 = InParent;
		auto _p1 = ConvertFromManage_FName(InSocketName);
		Self->WeldTo(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_WeldToImplementation(UStaticMeshComponent* Self, USceneComponent* InParent, char* ParentSocketName, bool bWeldSimulatedChild)
	{
		auto _p0 = InParent;
		auto _p1 = ConvertFromManage_FName(ParentSocketName);
		auto _p2 = bWeldSimulatedChild;
		return Self->WeldToImplementation(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_ApplyWorldOffset(UStaticMeshComponent* Self, INT_PTR InOffset, bool bWorldShift)
	{
		auto _p0 = *(FVector*)InOffset;
		auto _p1 = bWorldShift;
		Self->ApplyWorldOffset(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_CalcBoundingCylinder(UStaticMeshComponent* Self, float CylinderRadius, float CylinderHalfHeight)
	{
		auto _p0 = CylinderRadius;
		auto _p1 = CylinderHalfHeight;
		Self->CalcBoundingCylinder(_p0, _p1);
	}